# Lucent

./: Cargo.toml  README.md  default_config.toml  lucent  org.freedesktop.Notifications.service
.github/scripts/: generate_aur_files.sh
.github/workflows/: aur-update.yml  release.yml
packaging/lucent/: PKGBUILD
packaging/lucent-bin/: PKGBUILD
packaging/lucent-git/: PKGBUILD
src/: config.rs  dbus.rs  main.rs  notification.rs
src/ui/: mod.rs  style.rs  window.rs
